--- a/src/seraf.html
+++ b/src/seraf.html
@@ -108,11 +108,11 @@
             <!-- Navigation -->
             <ul id="nav" class="sf-menu">
                 <li><a href="index.html">Principal</a></li>
-                <li><a href="#">La Empresa</a>
+                <li><a href="features.html">La Empresa</a>
 
                 </li>
                 <li class="current-menu-item"><a href="gallery.html">Productos</a></li>
-                <li><a href="#">Novedades</a></li>
+                <li><a href="portfolio.html">Novedades</a></li>
                 <li><a href="contact.html">Contacto</a></li>
             </ul>
             <!-- Navigation -->
@@ -124,103 +124,95 @@
 <!-- ENDS Menu -->
 
 
-
-
-
 <!-- MAIN -->
-			<div id="main">
-				<!-- wrapper-main -->
-				<div class="wrapper">
+<div id="main">
+    <!-- wrapper-main -->
+    <div class="wrapper">
 
-					<!-- content -->
-					<div id="content">
+        <!-- content -->
+        <div id="content">
 
-						<!-- title -->
-						<div id="page-title">
-							<span class="title">Nuestros productos</span>
-							<span class="subtitle">Debajo se encuetran todos los productos que fabricamos </span>
-						</div>
-						<!-- ENDS title -->
+            <!-- title -->
+            <div id="page-title">
+							<span class="title">Cabina Serfaf
 
-						<!-- filter -->
-						<ul id="portfolio-filter" class="filter">
-							<li>Filtrar:</li>
-							<li><a href="#" data-filter="*" > Todos </a></li>
-				    		<li><a href="#" data-filter=".adaptables" > Cabinas Adaptables </a></li>
-				    		<li><a href="#" data-filter=".agricolas" > Cabinas Agrícolas </a></li>
-                            <li><a href="#" data-filter=".tractores" > Cabinas para Tractores </a></li>
-                            <li><a href="#" data-filter=".viales" > Cabinas Viales </a></li>
-                            <li><a href="#" data-filter=".accesorios" > Accesorios </a></li>
-                            <li><a href="#" data-filter=".tanques" > Tanques </a></li>
-                            <li><a href="#" data-filter=".sillones" > Sillones </a></li>
-                            <li><a href="#" data-filter=".cuchas" > Cuchas </a></li>
-                            <li><a href="#" data-filter=".juegos" > Juegos </a></li>
-                            <li><a href="#" data-filter=".desarrollos" > Desarrollos </a></li>
-				    	</ul>
-						<!-- ENDS filter -->
+							</span>
+                <span class="subtitle">Cabina agrícola.</span>
+            </div>
+            <!-- ENDS title -->
+
+            <!-- project column (left)-->
+            <div class="project-column">
+                <!-- shadow -->
+                <div class="project-shadow">
+                    <div class="project-thumbnail"><img src="img/productos/multijacto/3.jpg" alt="Feature image"/>
+                    </div>
+                    <!-- meta -->
+
+                    <!-- ENDS meta -->
+                    <div class="portfolio-left-shadow"></div>
+                </div>
+                <!-- ENDS shadow -->
 
 
-						<!-- gallery-->
-						<ul id="portfolio-list" class="gallery">
-                            <li class="adaptables"><a href="hj.html" title="Cabina HJ"><img src="img/productos/hj.jpg" alt="Pic"></a></li>
-                            <li class="adaptables"><a href="cj.html" title="Cabina CJ"><img src="img/productos/cj.jpg" alt="Pic"></a></li>
-                            <li class="adaptables"><a href="tp03.html" title="Cabina TP03"><img src="img/productos/tp03.jpg" alt="Pic"></a></li>
-                            <li class="adaptables"><a href="tp04.html" title="Cabina TP04"><img src="img/productos/tp04.jpg" alt="Pic"></a></li>
-                            <li class="adaptables"><a href="bc01.html" title="Cabina BC01"><img src="img/productos/bc01.jpg" alt="Pic"></a></li>
-                            <li class="agricolas"><a href="tedeschi.html" title="TEDESCHI M-2600 Y MT-3000"><img src="img/productos/tedeschi/1mini.jpg" alt="Pic"></a></li>
-                            <li class="agricolas"><a href="confort.html" title="Confort 2007"><img src="img/productos/confort2007/1mini.jpg" alt="Pic"></a></li>
-                            <li class="agricolas"><a href="metalfor.html" title="Metalfor Modelo M2500 Y M3200"><img src="img/productos/metalfor/1mini.jpg" alt="Pic"></a></li>
-                            <li class="agricolas"><a href="favot.html" title="Cabina Favot"><img src="img/productos/favot/1mini.jpg" alt="Pic"></a></li>
-                            <li class="agricolas"><a href="apache.html" title="Apache"><img src="img/productos/apache/1mini.jpg" alt="Pic"></a></li>
-                            <li class="agricolas"><a href="multijacto.html" title="Multijacto"><img src="img/productos/multijacto/1mini.jpg" alt="Pic"></a></li>
-                            <li class="agricolas"><a href="marani.html" title="Marani"><img src="img/productos/marani/1mini.jpg" alt="Pic"></a></li>
-                            <li class="agricolas"><a href="grigol.html" title="Grilog"><img src="img/productos/grilog/1mini.jpg" alt="Pic"></a></li>
-                            <li class="agricolas"><a href="spw.html" title="SPW"><img src="img/productos/spw/1mini.jpg" alt="Pic"></a></li>
-                            <li class="agricolas"><a href="caiman.html" title="Caiman"><img src="img/productos/caiman/1mini.jpg" alt="Pic"></a></li>
-                            <li class="agricolas"><a href="breso.html" title="Breso"><img src="img/productos/breso/1mini.jpg" alt="Pic"></a></li>
-                            <li class="agricolas"><a href="seraf.html" title="Seraf"><img src="img/productos/seraf/1mini.jpg" alt="Pic"></a></li>
+                <!-- project gallery -->
+                <h2>Imágenes de esta cabina</h2>
+                <ul class="project-gallery">
+                    <li><a href="img/productos/seraf/2.jpg" class="fancybox"><img
+                            src="img/productos/seraf/2mini.jpg" alt="Pic"></a></li>
+                    <li><a href="img/productos/seraf/3.jpg" class="fancybox"><img
+                            src="img/productos/seraf/3mini.jpg" alt="Pic"></a></li>
+                </ul>
+                <!-- ENDS project gallery -->
 
 
-						</ul>
-						<!-- ENDS gallery -->
+            </div>
+            <!-- ENDS project column (left)-->
 
 
-						<!-- pagination -->
-						<div class="clear"></div>
-						<ul class='pager'>
-							<li class='first-page'><a href='#'>&laquo;</a></li>
-							<li><a href='#' >&lsaquo;</a></li>
-							<li><a href='#' >2</a></li>
-							<li><a href='#' >3</a></li>
-							<li class='active'><a href='#'>4</a></li>
-							<li><a href='#' >5</a></li>
-							<li><a href='#' >6</a></li>
-							<li><a href='#' >&rsaquo;</a></li>
-							<li class='last-page'><a href='#'>&raquo;</a></li>
-						</ul>
-						<!-- ENDS pagination -->
+            <!--project column (right) -->
+            <div class="project-column">
+                <!--<h1 class="project-title">Descripción:</h1>-->
+
+                <p>Diseñada y producidas exclusivamente para empresas terminales, las cabinas agrícolas son puestas en
+                    producción para selectos fabricantes del mercado argentino, asi como también de otros paises.</p>
+
+                <!--<h1 class="project-title">Detalles:</h1>-->
+
+                <p style="margin-bottom: 5px;">Nuestro compromiso, es poder brindarnos de manera integra, para que luego
+                    de un exaustivo trabajo en equipo, nuestros clientes, obtengan el producto esperado.</p> <br/>
+
+                <p style="margin-bottom: 5px;">Confiabilidad, lealtad y reserva, son nuestros pilares fundamentales a la
+                    hora de encarar un nuevo desarrollo , un nuevo producto.</p>
 
 
-					</div>
-					<!-- ENDS content -->
+            </div>
+            <div class="clear"></div>
+            <!-- ENDS project column (right) -->
 
-				</div>
-				<!-- ENDS wrapper-main -->
-			</div>
-			<!-- ENDS MAIN -->
 
-			<!-- Twitter -->
-			<div id="twitter">
-				<div class="wrapper">
-					<a href="#" id="prev-tweet"></a>
-					<a href="#" id="next-tweet"></a>
-					<img id="bird" src="img/bird.png" alt="Tweets" />
-					<div id="tweets">
-						<ul class="tweet_list"></ul>
-					</div>
-				</div>
-			</div>
-			<!-- ENDS Twitter -->
+        </div>
+        <!-- ENDS content -->
+
+    </div>
+    <!-- ENDS wrapper-main -->
+</div>
+<!-- ENDS MAIN -->
+
+<!-- Twitter -->
+<div id="twitter">
+    <div class="wrapper">
+        <a href="#" id="prev-tweet"></a>
+        <a href="#" id="next-tweet"></a>
+        <img id="bird" src="img/bird.png" alt="Tweets"/>
+
+        <div id="tweets">
+            <ul class="tweet_list"></ul>
+        </div>
+    </div>
+</div>
+<!-- ENDS Twitter -->
+
 
 <!-- FOOTER -->
 <div id="footer">
@@ -285,7 +277,9 @@
 <div id="bottom">
     <!-- wrapper-bottom -->
     <div class="wrapper">
-        <div id="bottom-text">Powered by <a href="http://www.flipstudios.com.ar"><img style="margin-bottom: -16px;" src="img/footer/logo_footer.png"></a></div>
+        <div id="bottom-text">Powered by <a href="http://www.flipstudios.com.ar"><img style="margin-bottom: -16px;"
+                                                                                      src="img/footer/logo_footer.png"></a>
+        </div>
         <!-- Social -->
         <ul class="social ">
             <li><a href="http://www.facebook.com" class="poshytip  facebook" title="Visitanos en facebook"></a></li>
