--- a/src/gallery.html
+++ b/src/gallery.html
@@ -152,10 +152,7 @@
                             <li><a href="#" data-filter=".viales" > Cabinas Viales </a></li>
                             <li><a href="#" data-filter=".accesorios" > Accesorios </a></li>
                             <li><a href="#" data-filter=".tanques" > Tanques </a></li>
-                            <li><a href="#" data-filter=".sillones" > Sillones </a></li>
-                            <li><a href="#" data-filter=".cuchas" > Cuchas </a></li>
-                            <li><a href="#" data-filter=".juegos" > Juegos </a></li>
-                            <li><a href="#" data-filter=".desarrollos" > Desarrollos </a></li>
+                            <li><a href="#" data-filter=".especiales" > Especiales </a></li>
 				    	</ul>
 						<!-- ENDS filter -->
 
@@ -183,22 +180,6 @@
 
 						</ul>
 						<!-- ENDS gallery -->
-
-
-						<!-- pagination -->
-						<div class="clear"></div>
-						<ul class='pager'>
-							<li class='first-page'><a href='#'>&laquo;</a></li>
-							<li><a href='#' >&lsaquo;</a></li>
-							<li><a href='#' >2</a></li>
-							<li><a href='#' >3</a></li>
-							<li class='active'><a href='#'>4</a></li>
-							<li><a href='#' >5</a></li>
-							<li><a href='#' >6</a></li>
-							<li><a href='#' >&rsaquo;</a></li>
-							<li class='last-page'><a href='#'>&raquo;</a></li>
-						</ul>
-						<!-- ENDS pagination -->
 
 
 					</div>
@@ -233,7 +214,7 @@
                 <ul>
                     <li class="page_item"><a href="index.html">Cabinas Adaptables</a></li>
                     <li class="page_item"><a href="features.html">Cabinas Agrícolas</a></li>
-                    <li class="page_item"><a href="blog.html">Cabinas Tractores</a></li>
+                    <li class="page_item"><a href="blog.html">Cabinas para Tractores</a></li>
                     <li class="page_item"><a href="portfolio.html">Cabinas Viales</a></li>
                     <li class="page_item"><a href="gallery.html">Accesorios</a></li>
                     <li class="page_item"><a href="contact.html">Tanques</a></li>
