--- a/src/valtra.html
+++ b/src/valtra.html
@@ -108,11 +108,11 @@
             <!-- Navigation -->
             <ul id="nav" class="sf-menu">
                 <li><a href="index.html">Principal</a></li>
-                <li><a href="#">La Empresa</a>
+                <li><a href="features.html">La Empresa</a>
 
                 </li>
                 <li class="current-menu-item"><a href="gallery.html">Productos</a></li>
-                <li><a href="#">Novedades</a></li>
+                <li><a href="portfolio.html">Novedades</a></li>
                 <li><a href="contact.html">Contacto</a></li>
             </ul>
             <!-- Navigation -->
@@ -128,83 +128,81 @@
 
 
 <!-- MAIN -->
-			<div id="main">
-				<!-- wrapper-main -->
-				<div class="wrapper">
+<div id="main">
+    <!-- wrapper-main -->
+    <div class="wrapper">
 
-					<!-- content -->
-					<div id="content">
+        <!-- content -->
+        <div id="content">
 
-						<!-- title -->
-						<div id="page-title">
-							<span class="title">Nuestros productos</span>
-							<span class="subtitle">Debajo se encuetran todos los productos que fabricamos </span>
-						</div>
-						<!-- ENDS title -->
+            <!-- title -->
+            <div id="page-title">
+                <span class="title">Cabina adaptables VALTRA</span>
+                <span class="subtitle">Cabina para tractores.</span>
+            </div>
+            <!-- ENDS title -->
 
-						<!-- filter -->
-						<ul id="portfolio-filter" class="filter">
-							<li>Filtrar:</li>
-							<li><a href="#" data-filter="*" > Todos </a></li>
-				    		<li><a href="#" data-filter=".adaptables" > Cabinas Adaptables </a></li>
-				    		<li><a href="#" data-filter=".agricolas" > Cabinas Agrícolas </a></li>
-                            <li><a href="#" data-filter=".tractores" > Cabinas para Tractores </a></li>
-                            <li><a href="#" data-filter=".viales" > Cabinas Viales </a></li>
-                            <li><a href="#" data-filter=".accesorios" > Accesorios </a></li>
-                            <li><a href="#" data-filter=".tanques" > Tanques </a></li>
-                            <li><a href="#" data-filter=".especiales" > Especiales </a></li>
-				    	</ul>
-						<!-- ENDS filter -->
+            <!-- project column (left)-->
+            <div class="project-column">
+                <!-- shadow -->
+                <div class="project-shadow">
+                    <div class="project-thumbnail"><img src="img/productos/valtra/1.jpg"  alt="Feature image" /></div>
+                    <!-- meta -->
+
+                    <!-- ENDS meta -->
+                    <div class="portfolio-left-shadow"></div>
+                </div>
+                <!-- ENDS shadow -->
 
 
-						<!-- gallery-->
-						<ul id="portfolio-list" class="gallery">
-                            <li class="adaptables"><a href="hj.html" title="Cabina HJ"><img src="img/productos/hj.jpg" alt="Pic"></a></li>
-                            <li class="adaptables"><a href="cj.html" title="Cabina CJ"><img src="img/productos/cj.jpg" alt="Pic"></a></li>
-                            <li class="adaptables"><a href="tp03.html" title="Cabina TP03"><img src="img/productos/tp03.jpg" alt="Pic"></a></li>
-                            <li class="adaptables"><a href="tp04.html" title="Cabina TP04"><img src="img/productos/tp04.jpg" alt="Pic"></a></li>
-                            <li class="adaptables"><a href="bc01.html" title="Cabina BC01"><img src="img/productos/bc01.jpg" alt="Pic"></a></li>
-                            <li class="agricolas"><a href="tedeschi.html" title="TEDESCHI M-2600 Y MT-3000"><img src="img/productos/tedeschi/1mini.jpg" alt="Pic"></a></li>
-                            <li class="agricolas"><a href="confort.html" title="Confort 2007"><img src="img/productos/confort2007/1mini.jpg" alt="Pic"></a></li>
-                            <li class="agricolas"><a href="metalfor.html" title="Metalfor Modelo M2500 Y M3200"><img src="img/productos/metalfor/1mini.jpg" alt="Pic"></a></li>
-                            <li class="agricolas"><a href="favot.html" title="Cabina Favot"><img src="img/productos/favot/1mini.jpg" alt="Pic"></a></li>
-                            <li class="agricolas"><a href="apache.html" title="Apache"><img src="img/productos/apache/1mini.jpg" alt="Pic"></a></li>
-                            <li class="agricolas"><a href="multijacto.html" title="Multijacto"><img src="img/productos/multijacto/1mini.jpg" alt="Pic"></a></li>
-                            <li class="agricolas"><a href="marani.html" title="Marani"><img src="img/productos/marani/1mini.jpg" alt="Pic"></a></li>
-                            <li class="agricolas"><a href="grigol.html" title="Grilog"><img src="img/productos/grilog/1mini.jpg" alt="Pic"></a></li>
-                            <li class="agricolas"><a href="spw.html" title="SPW"><img src="img/productos/spw/1mini.jpg" alt="Pic"></a></li>
-                            <li class="agricolas"><a href="caiman.html" title="Caiman"><img src="img/productos/caiman/1mini.jpg" alt="Pic"></a></li>
-                            <li class="agricolas"><a href="breso.html" title="Breso"><img src="img/productos/breso/1mini.jpg" alt="Pic"></a></li>
-                            <li class="agricolas"><a href="seraf.html" title="Seraf"><img src="img/productos/seraf/1mini.jpg" alt="Pic"></a></li>
-                            <li class="tractores"><a href="deere.html" title="Deere"><img src="img/productos/deere/1mini.jpg" alt="Pic"></a></li>
-                            <li class="tractores"><a href="holland.html" title="New Holland"><img src="img/productos/holland/1mini.jpg" alt="Pic"></a></li>
-                            <li class="tractores"><a href="valtra.html" title="Valtra"><img src="img/productos/valtra/1mini.jpg" alt="Pic"></a></li>
-                            <li class="tractores"><a href="special.html" title="Especial"><img src="img/productos/special/1mini.jpg" alt="Pic"></a></li>
+                <!-- project gallery -->
+                <h2>Imágenes de esta cabina</h2>
+                <ul class="project-gallery">
+                    <li><a href="img/productos/valtra/1.jpg" class="fancybox"><img src="img/productos/valtra/1mini.jpg" alt="Pic"></a></li>
+                    <li><a href="img/productos/valtra/2.jpg" class="fancybox"><img src="img/productos/valtra/2mini.jpg" alt="Pic"></a></li>
 
-                        </ul>
-						<!-- ENDS gallery -->
+                </ul>
+                <!-- ENDS project gallery -->
 
 
-					</div>
-					<!-- ENDS content -->
+            </div>
+            <!-- ENDS project column (left)-->
 
-				</div>
-				<!-- ENDS wrapper-main -->
-			</div>
-			<!-- ENDS MAIN -->
 
-			<!-- Twitter -->
-			<div id="twitter">
-				<div class="wrapper">
-					<a href="#" id="prev-tweet"></a>
-					<a href="#" id="next-tweet"></a>
-					<img id="bird" src="img/bird.png" alt="Tweets" />
-					<div id="tweets">
-						<ul class="tweet_list"></ul>
-					</div>
-				</div>
-			</div>
-			<!-- ENDS Twitter -->
+            <div class="project-column">
+                <h1 class="project-title">Descripción:</h1>
+
+                <p>Contamos con una exclusiva linea para tractores,las cuales son realizadas siguiendo los lineamientos y calidad de las cabinas originales.
+                    Brindamos al usuario, facilidad en el montaje y hermeticidad en su trabajo.</p>
+
+                <h2 class="project-title">Linea BM</h2>
+
+                <p>Cabina adaptables a los siguientes modelos de tractores:</p>
+
+                <p style="margin-bottom: 5px;"><strong>> </strong>110 - 120 - 125i - 1280R - 1780
+                </p><br/><br/>
+
+                <h2 class="project-title">Linea BH</h2>
+
+                <p>Cabina adaptables a los siguientes modelos de tractores:</p>
+
+                <p style="margin-bottom: 5px;"><strong>> </strong>145 - 165 - 180 -185i
+                </p>
+
+            </div>
+
+
+            <div class="clear"></div>
+            <!-- ENDS project column (right) -->
+
+
+        </div>
+        <!-- ENDS content -->
+
+    </div>
+    <!-- ENDS wrapper-main -->
+</div>
+<!-- ENDS MAIN -->
 
 <!-- FOOTER -->
 <div id="footer">
@@ -217,7 +215,7 @@
                 <ul>
                     <li class="page_item"><a href="index.html">Cabinas Adaptables</a></li>
                     <li class="page_item"><a href="features.html">Cabinas Agrícolas</a></li>
-                    <li class="page_item"><a href="blog.html">Cabinas para Tractores</a></li>
+                    <li class="page_item"><a href="blog.html">Cabinas Tractores</a></li>
                     <li class="page_item"><a href="portfolio.html">Cabinas Viales</a></li>
                     <li class="page_item"><a href="gallery.html">Accesorios</a></li>
                     <li class="page_item"><a href="contact.html">Tanques</a></li>
@@ -236,17 +234,7 @@
 
                 <p>Calidad, solidez y respuesta son los patrones que nos permiten que sigamos innovando en manera
                     constante, acompañando a nuestros clientes en el desarrollo de sus proyectos</p>
-                <!--<ul>-->
-                <!--<li><a href="#">Somos una empresa</a></li>-->
-                <!--<li><a href="#/">Wordpress projects senectus</a></li>-->
-                <!--<li><a href="#">Vestibulum tortor quam</a></li>-->
-                <!--<li><a href="#">Code projects amet quam egestas</a></li>-->
-                <!--<li><a href="#">Web design projects senectus</a></li>-->
-                <!--<li><a href="#/">Marketplace projects</a></li>-->
-                <!--<li><a href="#">Writting projects senectus</a></li>-->
-                <!--<li><a href="#">Drawings projects fames Aenean</a></li>-->
-                <!--<li><a href="#/">Wordpress projects Aenean ultricies</a></li>-->
-                <!--</ul>-->
+
             </li>
             <li class="col">
                 <h6>Contacto</h6>
