--- a/src/features.html
+++ b/src/features.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>NOVA</title>
+    <title>Tecno-Partes</title>
 
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.css" type="text/css" media="screen"/>
@@ -152,8 +152,10 @@
                     <p>Con mas de 20 años de trayectoria, la empresa es lider de fabricación de cabinas y componentes
                         para maquinaria agrícola y vial.</p>
                 </div>
+                <br/><br/>
+
                 <div class="one-half last">
-                    <h6 class="line-divider"> Tecno</h6>
+                    <!--<h6 class="line-divider"> Tecno</h6>-->
 
                     <img src="img/logo2.png">
                 </div>
@@ -194,8 +196,10 @@
                     <p class="clear"></p>
                     <!-- ENDS toggle -->
                 </div>
+                <br/><br/>
+
                 <div class="one-half last">
-                    <h6 class="line-divider">Nuestro trabajo</h6>
+                    <!--<h6 class="line-divider">Nuestro trabajo</h6>-->
 
                     <p>Brindamos soluciones únicas y creativas que le aporten valor a las necesidades de sus Clientes,
                         Tecno Partes es una empresa dinámica que brinda atención personalizada y trabajo en conjunto,
@@ -209,6 +213,16 @@
                 <!-- ENDS 2 cols -->
 
             </div>
+
+            <div class="one-half">
+                <iframe class="youtube-player" type="text/html" width="450" height="285"
+                        src="http://www.youtube.com/embed/VIDEO_ID" frameborder="0"></iframe>
+            </div>
+
+            <!--<div class="one-half last">-->
+                <!--<iframe class="youtube-player" type="text/html" width="450" height="285"-->
+                        <!--src="http://www.youtube.com/embed/VIDEO_ID" frameborder="0"></iframe>-->
+            <!--</div>-->
             <!-- ENDS page-content -->
 
         </div>
@@ -217,21 +231,6 @@
     <!-- ENDS wrapper-main -->
 </div>
 <!-- ENDS MAIN -->
-
-<!-- Twitter -->
-<div id="twitter">
-    <div class="wrapper">
-        <a href="#" id="prev-tweet"></a>
-        <a href="#" id="next-tweet"></a>
-        <img id="bird" src="img/bird.png" alt="Tweets"/>
-
-        <div id="tweets">
-            <ul class="tweet_list"></ul>
-        </div>
-    </div>
-</div>
-<!-- ENDS Twitter -->
-
 
 <!-- FOOTER -->
 <div id="footer">
