--- a/src/index.html
+++ b/src/index.html
@@ -108,8 +108,8 @@
             <!-- Navigation -->
             <ul id="nav" class="sf-menu">
                 <li class="current-menu-item"><a href="index.html">Principal</a></li>
-                <li><a href="#">La Empresa</a>
-                <!--<li><a href="features.html">La Empresa</a>-->
+                <!--<li><a href="#">La Empresa</a>-->
+                <li><a href="features.html">La Empresa</a>
 
                 </li>
                 <li><a href="gallery.html">Productos</a></li>
