--- a/src/index.html
+++ b/src/index.html
@@ -183,7 +183,7 @@
                             <a href="single.html" class="thumb" title="An image"><img src="img/dummies/recent2.png"
                                                                                       alt="Post"/></a>
 
-                            <div class="excerpt"> <br/>
+                            <div class="excerpt"><br/>
                                 <a href="single.html" class="header">Nueva cabina para autos BOBCAT 2200 4x4</a>
 
                             </div>
@@ -351,7 +351,9 @@
 <div id="bottom">
     <!-- wrapper-bottom -->
     <div class="wrapper">
-        <div id="bottom-text">Powered by <a href="http://www.flipstudios.com.ar"><img style="margin-bottom: -16px;" src="img/footer/logo_footer.png"></a></div>
+        <div id="bottom-text">Powered by <a href="http://www.flipstudios.com.ar"><img style="margin-bottom: -16px;"
+                                                                                      src="img/footer/logo_footer.png"></a>
+        </div>
         <!-- Social -->
         <ul class="social ">
             <li><a href="http://www.facebook.com" class="poshytip  facebook" title="Visitanos en facebook"></a></li>
