--- a/src/features.html
+++ b/src/features.html
@@ -144,9 +144,10 @@
 
                 <!-- 2 cols -->
                 <div class="one-half">
-                    <h6 class="line-divider">Quienes Somos?</h6>
+                    <h6 class="line-divider">Quienes Somos?</h6> <br/>
 
-                    <p>Tecno-Partes es una empresa Argentina, dedicada al diseño, desarrollo, y productos realizados
+                    <img src="img/logo2.png" style="width: 250px; margin-left: 56px"> <br/><br/>
+                    <p>Es una empresa Argentina, dedicada al diseño, desarrollo, y productos realizados
                         en plástico reforzado con fibra de vidrio para el abastecimiento de diversos mercados</p>
 
                     <p>Con mas de 20 años de trayectoria, la empresa es lider de fabricación de cabinas y componentes
@@ -157,7 +158,7 @@
                 <div class="one-half last">
                     <!--<h6 class="line-divider"> Tecno</h6>-->
 
-                    <img src="img/logo2.png">
+                    <img src="img/empresa/empresa.jpg">
                 </div>
                 <div class="clear "></div>
                 <!-- ENDS 2 cols -->
@@ -203,7 +204,7 @@
 
                     <p>Brindamos soluciones únicas y creativas que le aporten valor a las necesidades de sus Clientes,
                         Tecno Partes es una empresa dinámica que brinda atención personalizada y trabajo en conjunto,
-                        tanto a los grandes fabricantes como a los usuarios finales.
+                        tanto a los grandes fabricantes como a los usuarios finales.<br/><br/>
 
                         Hoy, la empresa cuenta con una capacidad productiva de más de 3.000 mts2 donde se desarrollan
                         las áreas productiva, técnica y administrativa. Dotada de maquinaria y herramental de primer
@@ -214,15 +215,22 @@
 
             </div>
 
-            <div class="one-half">
-                <iframe class="youtube-player" type="text/html" width="450" height="285"
-                        src="http://www.youtube.com/embed/VIDEO_ID" frameborder="0"></iframe>
+            <div class="one-half ">
+
+                <h6 class="line-divider" style="margin-left: 33px">Tecno Partes en la TV</h6>
+
+                <p  style="margin-left: 33px">Una breve recorrida por nuestra empresa<br/><br/>
+                Duración: 7 min 4 seg</p>
+
+
             </div>
 
-            <!--<div class="one-half last">-->
-                <!--<iframe class="youtube-player" type="text/html" width="450" height="285"-->
-                        <!--src="http://www.youtube.com/embed/VIDEO_ID" frameborder="0"></iframe>-->
-            <!--</div>-->
+            <div class="one-half">
+                <iframe class="youtube-player" type="text/html" width="470" height="285"
+                        src="http://www.youtube.com/embed/7c4WYzr30B0" frameborder="0"></iframe>
+            </div>
+
+
             <!-- ENDS page-content -->
 
         </div>
