--- a/src/features.html
+++ b/src/features.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Tecno-Partes</title>
+    <title>NOVA</title>
 
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.css" type="text/css" media="screen"/>
@@ -144,21 +144,18 @@
 
                 <!-- 2 cols -->
                 <div class="one-half">
-                    <h6 class="line-divider">Quienes Somos?</h6> <br/>
+                    <h6 class="line-divider">Quienes Somos?</h6>
 
-                    <img src="img/logo2.png" style="width: 250px; margin-left: 56px"> <br/><br/>
-                    <p>Es una empresa Argentina, dedicada al diseño, desarrollo, y productos realizados
+                    <p>Tecno-Partes es una empresa Argentina, dedicada al diseño, desarrollo, y productos realizados
                         en plástico reforzado con fibra de vidrio para el abastecimiento de diversos mercados</p>
 
                     <p>Con mas de 20 años de trayectoria, la empresa es lider de fabricación de cabinas y componentes
                         para maquinaria agrícola y vial.</p>
                 </div>
-                <br/><br/>
-
                 <div class="one-half last">
-                    <!--<h6 class="line-divider"> Tecno</h6>-->
+                    <h6 class="line-divider"> Tecno</h6>
 
-                    <img src="img/empresa/empresa.jpg">
+                    <img src="img/logo2.png">
                 </div>
                 <div class="clear "></div>
                 <!-- ENDS 2 cols -->
@@ -197,14 +194,12 @@
                     <p class="clear"></p>
                     <!-- ENDS toggle -->
                 </div>
-                <br/><br/>
-
                 <div class="one-half last">
-                    <!--<h6 class="line-divider">Nuestro trabajo</h6>-->
+                    <h6 class="line-divider">Nuestro trabajo</h6>
 
                     <p>Brindamos soluciones únicas y creativas que le aporten valor a las necesidades de sus Clientes,
                         Tecno Partes es una empresa dinámica que brinda atención personalizada y trabajo en conjunto,
-                        tanto a los grandes fabricantes como a los usuarios finales.<br/><br/>
+                        tanto a los grandes fabricantes como a los usuarios finales.
 
                         Hoy, la empresa cuenta con una capacidad productiva de más de 3.000 mts2 donde se desarrollan
                         las áreas productiva, técnica y administrativa. Dotada de maquinaria y herramental de primer
@@ -214,23 +209,6 @@
                 <!-- ENDS 2 cols -->
 
             </div>
-
-            <div class="one-half ">
-
-                <h6 class="line-divider" style="margin-left: 33px">Tecno Partes en la TV</h6>
-
-                <p  style="margin-left: 33px">Una breve recorrida por nuestra empresa<br/><br/>
-                Duración: 7 min 4 seg</p>
-
-
-            </div>
-
-            <div class="one-half">
-                <iframe class="youtube-player" type="text/html" width="470" height="285"
-                        src="http://www.youtube.com/embed/7c4WYzr30B0" frameborder="0"></iframe>
-            </div>
-
-
             <!-- ENDS page-content -->
 
         </div>
@@ -239,6 +217,21 @@
     <!-- ENDS wrapper-main -->
 </div>
 <!-- ENDS MAIN -->
+
+<!-- Twitter -->
+<div id="twitter">
+    <div class="wrapper">
+        <a href="#" id="prev-tweet"></a>
+        <a href="#" id="next-tweet"></a>
+        <img id="bird" src="img/bird.png" alt="Tweets"/>
+
+        <div id="tweets">
+            <ul class="tweet_list"></ul>
+        </div>
+    </div>
+</div>
+<!-- ENDS Twitter -->
+
 
 <!-- FOOTER -->
 <div id="footer">
