--- a/src/index.html
+++ b/src/index.html
@@ -108,8 +108,8 @@
             <!-- Navigation -->
             <ul id="nav" class="sf-menu">
                 <li class="current-menu-item"><a href="index.html">Principal</a></li>
-                <!--<li><a href="#">La Empresa</a>-->
-                <li><a href="features.html">La Empresa</a>
+                <li><a href="#">La Empresa</a>
+                <!--<li><a href="features.html">La Empresa</a>-->
 
                 </li>
                 <li><a href="gallery.html">Productos</a></li>
@@ -173,7 +173,7 @@
                                                                                       alt="Post"/></a>
 
                             <div class="excerpt">
-                                <a href="single.html" class="header">Modelo de Cabian para máquinas Caterpillar modelo
+                                <a href="single.html" class="header">Modelo de Cabina para máquinas Caterpillar modelo
                                     CP533E</a>
 
                             </div>
@@ -183,7 +183,7 @@
                             <a href="single.html" class="thumb" title="An image"><img src="img/dummies/recent2.png"
                                                                                       alt="Post"/></a>
 
-                            <div class="excerpt"><br/>
+                            <div class="excerpt"> <br/>
                                 <a href="single.html" class="header">Nueva cabina para autos BOBCAT 2200 4x4</a>
 
                             </div>
@@ -351,9 +351,7 @@
 <div id="bottom">
     <!-- wrapper-bottom -->
     <div class="wrapper">
-        <div id="bottom-text">Powered by <a href="http://www.flipstudios.com.ar"><img style="margin-bottom: -16px;"
-                                                                                      src="img/footer/logo_footer.png"></a>
-        </div>
+        <div id="bottom-text">Powered by <a href="http://www.flipstudios.com.ar"><img style="margin-bottom: -16px;" src="img/footer/logo_footer.png"></a></div>
         <!-- Social -->
         <ul class="social ">
             <li><a href="http://www.facebook.com" class="poshytip  facebook" title="Visitanos en facebook"></a></li>
