--- a/src/gallery.html
+++ b/src/gallery.html
@@ -199,8 +199,11 @@
                             <li class="viales"><a href="sanblas.html" title="Sanblas"><img src="img/productos/viales/sanblas/1.jpg" alt="Pic"></a></li>
                             <li class="viales"><a href="vialvieja.html" title="Vialvieja"><img src="img/productos/viales/vialvieja/1.png" alt="Pic"></a></li>
                             <li class="viales"><a href="yale.html" title="Yale"><img src="img/productos/viales/yale/1.jpg" alt="Pic"></a></li>
-                            <li class="especiales"><a href="especial1.html" title="Especial"><img src="img/productos/especial1/1especialmini.png" alt="Pic"></a></li>
-                            <li class="especiales"><a href="especial2.html" title="Especial"><img src="img/productos/especial2/1especialmini.png" alt="Pic"></a></li>
+                            <li class="especiales"><a href="especial1.html" title="Asiento"><img src="img/productos/especial1/1especialmini.png" alt="Pic"></a></li>
+                            <li class="especiales"><a href="especial2.html" title="Asiento"><img src="img/productos/especial2/1especialmini.png" alt="Pic"></a></li>
+                            <li class="especiales"><a href="cuchas.html" title="Cuchas"><img src="img/productos/especiales/cuchas.png" alt="Pic"></a></li>
+                            <li class="especiales"><a href="juegos.html" title="Juegos"><img src="img/productos/especiales/juegos/portada.png" alt="Pic"></a></li>
+
 
                         </ul>
 						<!-- ENDS gallery -->
