--- a/src/desarrollos.html
+++ b/src/desarrollos.html
@@ -134,7 +134,7 @@
 
             <!-- title -->
             <div id="page-title">
-							<span class="title">Juegos
+							<span class="title">Desarrollos
 							</span>
             </div>
             <!-- ENDS title -->
@@ -143,7 +143,7 @@
             <div class="project-column">
                 <!-- shadow -->
                 <div class="project-shadow">
-                    <div class="project-thumbnail"><img src="./img/productos/especiales/juegos/juegobig.png"
+                    <div class="project-thumbnail"><img src="./img/productos/especiales/desarrollos/portadabig.png"
                                                         alt="Feature image"/>
                     </div>
                     <!-- meta -->
@@ -155,36 +155,40 @@
 
 
                 <!-- project gallery -->
-                <h2>Imágenes de esta cabina</h2>
+                <h2>Imágenes</h2>
                 <ul class="project-gallery">
-                    <li><a href="img/productos/especiales/juegos/juegos1.jpg" class="fancybox"><img
-                            src="img/productos/especiales/juegos/1mini.png" alt="Pic"></a></li>
+                    <li><a href="img/productos/especiales/desarrollos/1.png" class="fancybox"><img
+                            src="img/productos/especiales/desarrollos/1mini.png" alt="Pic"></a></li>
 
-                    <li><a href="img/productos/especiales/juegos/juegos2.jpg" class="fancybox"><img
-                            src="img/productos/especiales/juegos/2mini.png" alt="Pic"></a></li>
+                    <li><a href="img/productos/especiales/desarrollos/2.png" class="fancybox"><img
+                            src="img/productos/especiales/desarrollos/2mini.png" alt="Pic"></a></li>
 
+                    <li><a href="img/productos/especiales/desarrollos/3.png" class="fancybox"><img
+                            src="img/productos/especiales/desarrollos/3mini.png" alt="Pic"></a></li>
 
-                    <li><a href="img/productos/especiales/juegos/juegos3.jpg" class="fancybox"><img
-                            src="img/productos/especiales/juegos/3mini.png" alt="Pic"></a></li>
+                    <li><a href="img/productos/especiales/desarrollos/4.png" class="fancybox"><img
+                            src="img/productos/especiales/desarrollos/4mini.png" alt="Pic"></a></li>
 
+                    <li><a href="img/productos/especiales/desarrollos/5.png" class="fancybox"><img
+                            src="img/productos/especiales/desarrollos/5mini.png" alt="Pic"></a></li>
 
-                    <li><a href="img/productos/especiales/juegos/juegos4.jpg" class="fancybox"><img
-                            src="img/productos/especiales/juegos/4mini.png" alt="Pic"></a></li>
+                    <li><a href="img/productos/especiales/desarrollos/6.png" class="fancybox"><img
+                            src="img/productos/especiales/desarrollos/6mini.png" alt="Pic"></a></li>
 
-                    <li><a href="img/productos/especiales/juegos/juego5.jpg" class="fancybox"><img
-                            src="img/productos/especiales/juegos/5mini.png" alt="Pic"></a></li>
+                    <li><a href="img/productos/especiales/desarrollos/7.png" class="fancybox"><img
+                            src="img/productos/especiales/desarrollos/7mini.png" alt="Pic"></a></li>
 
-                    <li><a href="img/productos/especiales/juegos/juegos6.jpg" class="fancybox"><img
-                            src="img/productos/especiales/juegos/6mini.png" alt="Pic"></a></li>
+                    <li><a href="img/productos/especiales/desarrollos/8.png" class="fancybox"><img
+                            src="img/productos/especiales/desarrollos/8mini.png" alt="Pic"></a></li>
 
-                    <li><a href="img/productos/especiales/juegos/juegos7.jpg" class="fancybox"><img
-                            src="img/productos/especiales/juegos/7mini.png" alt="Pic"></a></li>
+                    <li><a href="img/productos/especiales/desarrollos/9.png" class="fancybox"><img
+                            src="img/productos/especiales/desarrollos/9mini.png" alt="Pic"></a></li>
 
-                    <li><a href="img/productos/especiales/juegos/juegos8.jpg" class="fancybox"><img
-                            src="img/productos/especiales/juegos/8mini.png" alt="Pic"></a></li>
+                    <li><a href="img/productos/especiales/desarrollos/10.png" class="fancybox"><img
+                            src="img/productos/especiales/desarrollos/10mini.png" alt="Pic"></a></li>
 
-                    <li><a href="img/productos/especiales/juegos/9.png" class="fancybox"><img
-                            src="img/productos/especiales/juegos/9mini.png" alt="Pic"></a></li>
+                    <li><a href="img/productos/especiales/desarrollos/11.png" class="fancybox"><img
+                            src="img/productos/especiales/desarrollos/11mini.png" alt="Pic"></a></li>
                 </ul>
                 <!-- ENDS project gallery -->
 
@@ -197,14 +201,15 @@
             <div class="project-column">
                 <!--<h1 class="project-title">Descripción:</h1>-->
 
-                <p>Divertidos y resistentes juegos para chicos, realizados íntegramente en P.R.F.V con diseños únicos
-                    que garantizan la seguridad para los mas grandes y la diversión para los mas chicos.</p>
+                <p>Nuestras modernas instalaciones y maquinarias, junto a personal altamente capacitado, permiten que
+                    podamos realizar todo aquello que los poseedores de proyecto deciden realizar en P.R.F.V
+                    garantizando, como en los demas productos, calidad, confiabilidad y nuestro compromiso
+                    incondicional.</p>
 
                 <!--<h1 class="project-title">Detalles:</h1>-->
 
                 <p style="margin-bottom: 5px;">La gran resistencia al uso continuo y a los factores climáticos hacen que
                     los juegos, sean ideales para el uso exterior.</p> <br/>
-
 
 
             </div>
@@ -219,21 +224,6 @@
     <!-- ENDS wrapper-main -->
 </div>
 <!-- ENDS MAIN -->
-
-<!-- Twitter -->
-<div id="twitter">
-    <div class="wrapper">
-        <a href="#" id="prev-tweet"></a>
-        <a href="#" id="next-tweet"></a>
-        <img id="bird" src="img/bird.png" alt="Tweets"/>
-
-        <div id="tweets">
-            <ul class="tweet_list"></ul>
-        </div>
-    </div>
-</div>
-<!-- ENDS Twitter -->
-
 
 <!-- FOOTER -->
 <div id="footer">
