--- a/src/features.html
+++ b/src/features.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>NOVA</title>
+    <title>Tecno-Partes</title>
 
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.css" type="text/css" media="screen"/>
@@ -144,18 +144,21 @@
 
                 <!-- 2 cols -->
                 <div class="one-half">
-                    <h6 class="line-divider">Quienes Somos?</h6>
+                    <h6 class="line-divider">Quienes Somos?</h6> <br/>
 
-                    <p>Tecno-Partes es una empresa Argentina, dedicada al diseño, desarrollo, y productos realizados
+                    <img src="img/logo2.png" style="width: 250px; margin-left: 56px"> <br/><br/>
+                    <p>Es una empresa Argentina, dedicada al diseño, desarrollo, y productos realizados
                         en plástico reforzado con fibra de vidrio para el abastecimiento de diversos mercados</p>
 
                     <p>Con mas de 20 años de trayectoria, la empresa es lider de fabricación de cabinas y componentes
                         para maquinaria agrícola y vial.</p>
                 </div>
-                <div class="one-half last">
-                    <h6 class="line-divider"> Tecno</h6>
+                <br/><br/>
 
-                    <img src="img/logo2.png">
+                <div class="one-half last">
+                    <!--<h6 class="line-divider"> Tecno</h6>-->
+
+                    <img src="img/empresa.jpg">
                 </div>
                 <div class="clear "></div>
                 <!-- ENDS 2 cols -->
@@ -194,12 +197,14 @@
                     <p class="clear"></p>
                     <!-- ENDS toggle -->
                 </div>
+                <br/><br/>
+
                 <div class="one-half last">
-                    <h6 class="line-divider">Nuestro trabajo</h6>
+                    <!--<h6 class="line-divider">Nuestro trabajo</h6>-->
 
                     <p>Brindamos soluciones únicas y creativas que le aporten valor a las necesidades de sus Clientes,
                         Tecno Partes es una empresa dinámica que brinda atención personalizada y trabajo en conjunto,
-                        tanto a los grandes fabricantes como a los usuarios finales.
+                        tanto a los grandes fabricantes como a los usuarios finales.<br/><br/>
 
                         Hoy, la empresa cuenta con una capacidad productiva de más de 3.000 mts2 donde se desarrollan
                         las áreas productiva, técnica y administrativa. Dotada de maquinaria y herramental de primer
@@ -209,6 +214,23 @@
                 <!-- ENDS 2 cols -->
 
             </div>
+
+            <div class="one-half ">
+
+                <h6 class="line-divider" style="margin-left: 33px">Tecno Partes en la TV</h6>
+
+                <p  style="margin-left: 33px">Una breve recorrida por nuestra empresa<br/><br/>
+                    Duración: 7 min 4 seg</p>
+
+
+            </div>
+
+            <div class="one-half">
+                <iframe class="youtube-player" type="text/html" width="470" height="285"
+                        src="http://www.youtube.com/embed/7c4WYzr30B0" frameborder="0"></iframe>
+            </div>
+
+
             <!-- ENDS page-content -->
 
         </div>
@@ -217,21 +239,6 @@
     <!-- ENDS wrapper-main -->
 </div>
 <!-- ENDS MAIN -->
-
-<!-- Twitter -->
-<div id="twitter">
-    <div class="wrapper">
-        <a href="#" id="prev-tweet"></a>
-        <a href="#" id="next-tweet"></a>
-        <img id="bird" src="img/bird.png" alt="Tweets"/>
-
-        <div id="tweets">
-            <ul class="tweet_list"></ul>
-        </div>
-    </div>
-</div>
-<!-- ENDS Twitter -->
-
 
 <!-- FOOTER -->
 <div id="footer">
@@ -242,13 +249,13 @@
             <li class="col">
                 <h6>Productos</h6>
                 <ul>
-                    <li class="page_item"><a href="index.html">Cabinas Adaptables</a></li>
-                    <li class="page_item"><a href="features.html">Cabinas Agrícolas</a></li>
-                    <li class="page_item"><a href="blog.html">Cabinas Tractores</a></li>
-                    <li class="page_item"><a href="portfolio.html">Cabinas Viales</a></li>
+                    <li class="page_item"><a href="gallery.html">Cabinas Adaptables</a></li>
+                    <li class="page_item"><a href="gallery.html">Cabinas Agrícolas</a></li>
+                    <li class="page_item"><a href="gallery.html">Cabinas Tractores</a></li>
+                    <li class="page_item"><a href="gallery.html">Cabinas Viales</a></li>
                     <li class="page_item"><a href="gallery.html">Accesorios</a></li>
-                    <li class="page_item"><a href="contact.html">Tanques</a></li>
-                    <li class="page_item"><a href="contact.html">Especiales</a></li>
+                    <li class="page_item"><a href="gallery.html">Tanques</a></li>
+                    <li class="page_item"><a href="gallery.html">Especiales</a></li>
                 </ul>
             </li>
 
@@ -263,17 +270,7 @@
 
                 <p>Calidad, solidez y respuesta son los patrones que nos permiten que sigamos innovando en manera
                     constante, acompañando a nuestros clientes en el desarrollo de sus proyectos</p>
-                <!--<ul>-->
-                <!--<li><a href="#">Somos una empresa</a></li>-->
-                <!--<li><a href="#/">Wordpress projects senectus</a></li>-->
-                <!--<li><a href="#">Vestibulum tortor quam</a></li>-->
-                <!--<li><a href="#">Code projects amet quam egestas</a></li>-->
-                <!--<li><a href="#">Web design projects senectus</a></li>-->
-                <!--<li><a href="#/">Marketplace projects</a></li>-->
-                <!--<li><a href="#">Writting projects senectus</a></li>-->
-                <!--<li><a href="#">Drawings projects fames Aenean</a></li>-->
-                <!--<li><a href="#/">Wordpress projects Aenean ultricies</a></li>-->
-                <!--</ul>-->
+
             </li>
             <li class="col">
                 <h6>Contacto</h6>
