--- a/src/index.html
+++ b/src/index.html
@@ -108,10 +108,7 @@
             <!-- Navigation -->
             <ul id="nav" class="sf-menu">
                 <li class="current-menu-item"><a href="index.html">Principal</a></li>
-                <li><a href="#">La Empresa</a>
-                <!--<li><a href="features.html">La Empresa</a>-->
-
-                </li>
+                <li><a href="features.html">La Empresa</a></li>
                 <li><a href="gallery.html">Productos</a></li>
                 <li><a href="#">Novedades</a></li>
                 <li><a href="contact.html">Contacto</a></li>
@@ -183,7 +180,7 @@
                             <a href="single.html" class="thumb" title="An image"><img src="img/dummies/recent2.png"
                                                                                       alt="Post"/></a>
 
-                            <div class="excerpt"> <br/>
+                            <div class="excerpt"><br/>
                                 <a href="single.html" class="header">Nueva cabina para autos BOBCAT 2200 4x4</a>
 
                             </div>
@@ -297,13 +294,13 @@
             <li class="col">
                 <h6>Productos</h6>
                 <ul>
-                    <li class="page_item"><a href="index.html">Cabinas Adaptables</a></li>
-                    <li class="page_item"><a href="features.html">Cabinas Agrícolas</a></li>
-                    <li class="page_item"><a href="blog.html">Cabinas Tractores</a></li>
-                    <li class="page_item"><a href="portfolio.html">Cabinas Viales</a></li>
+                    <li class="page_item"><a href="gallery.html">Cabinas Adaptables</a></li>
+                    <li class="page_item"><a href="gallery.html">Cabinas Agrícolas</a></li>
+                    <li class="page_item"><a href="gallery.html">Cabinas Tractores</a></li>
+                    <li class="page_item"><a href="gallery.html">Cabinas Viales</a></li>
                     <li class="page_item"><a href="gallery.html">Accesorios</a></li>
-                    <li class="page_item"><a href="contact.html">Tanques</a></li>
-                    <li class="page_item"><a href="contact.html">Especiales</a></li>
+                    <li class="page_item"><a href="gallery.html">Tanques</a></li>
+                    <li class="page_item"><a href="gallery.html">Especiales</a></li>
                 </ul>
             </li>
 
@@ -318,17 +315,7 @@
 
                 <p>Calidad, solidez y respuesta son los patrones que nos permiten que sigamos innovando en manera
                     constante, acompañando a nuestros clientes en el desarrollo de sus proyectos</p>
-                <!--<ul>-->
-                <!--<li><a href="#">Somos una empresa</a></li>-->
-                <!--<li><a href="#/">Wordpress projects senectus</a></li>-->
-                <!--<li><a href="#">Vestibulum tortor quam</a></li>-->
-                <!--<li><a href="#">Code projects amet quam egestas</a></li>-->
-                <!--<li><a href="#">Web design projects senectus</a></li>-->
-                <!--<li><a href="#/">Marketplace projects</a></li>-->
-                <!--<li><a href="#">Writting projects senectus</a></li>-->
-                <!--<li><a href="#">Drawings projects fames Aenean</a></li>-->
-                <!--<li><a href="#/">Wordpress projects Aenean ultricies</a></li>-->
-                <!--</ul>-->
+
             </li>
             <li class="col">
                 <h6>Contacto</h6>
@@ -351,7 +338,9 @@
 <div id="bottom">
     <!-- wrapper-bottom -->
     <div class="wrapper">
-        <div id="bottom-text">Powered by <a href="http://www.flipstudios.com.ar"><img style="margin-bottom: -16px;" src="img/footer/logo_footer.png"></a></div>
+        <div id="bottom-text">Powered by <a href="http://www.flipstudios.com.ar"><img style="margin-bottom: -16px;"
+                                                                                      src="img/footer/logo_footer.png"></a>
+        </div>
         <!-- Social -->
         <ul class="social ">
             <li><a href="http://www.facebook.com" class="poshytip  facebook" title="Visitanos en facebook"></a></li>
