tanques mas info

--- a/src/gallery.html
+++ b/src/gallery.html
@@ -245,6 +245,34 @@
                 <li class="especiales"><a href="desarrollos.html" title="Desarrollos"><img
                         src="img/productos/especiales/desarrollos/portada.png" alt="Pic"></a></li>
 
+                <li class="tanques"><a href="tanque1.html" title="Tanque"><img
+                        src="img/productos/tanques/t1mini.png" alt="Pic"></a></li>
+                <li class="tanques"><a href="#" title="Tanque"><img
+                        src="img/productos/tanques/t2mini.png" alt="Pic"></a></li>
+                <li class="tanques"><a href="tanques2.html" title="Tanque"><img
+                        src="img/productos/tanques/t3mini.png" alt="Pic"></a></li>
+                <li class="tanques"><a href="tanques3.html" title="Tanque"><img
+                        src="img/productos/tanques/t4mini.png" alt="Pic"></a></li>
+                <li class="tanques"><a href="tanques4.html" title="Tanque"><img
+                        src="img/productos/tanques/t5mini.png" alt="Pic"></a></li>
+                <li class="tanques"><a href="tanques5.html" title="Tanque"><img
+                        src="img/productos/tanques/t6mini.png" alt="Pic"></a></li>
+                <li class="tanques"><a href="#" title="Tanque"><img
+                        src="img/productos/tanques/t7mini.png" alt="Pic"></a></li>
+                <li class="tanques"><a href="tanque1.html" title="Tanque"><img
+                        src="img/productos/tanques/t8mini.png" alt="Pic"></a></li>
+                <li class="tanques"><a href="#" title="Tanque"><img
+                        src="img/productos/tanques/t9mini.png" alt="Pic"></a></li>
+                <li class="tanques"><a href="#" title="Tanque"><img
+                        src="img/productos/tanques/t10mini.png" alt="Pic"></a></li>
+                <li class="tanques"><a href="#" title="Tanque"><img
+                        src="img/productos/tanques/t11mini.png" alt="Pic"></a></li>
+                <li class="tanques"><a href="#" title="Tanque"><img
+                        src="img/productos/tanques/t12mini.png" alt="Pic"></a></li>
+                <li class="tanques"><a href="#" title="Tanque"><img
+                        src="img/productos/tanques/t13mini.png" alt="Pic"></a></li>
+
+
 
             </ul>
             <!-- ENDS gallery -->
